# bbf-prot

./: .gitignore  README.md  bank_balance_forward_demo.ipynb  docker-compose.yaml  init-replica.sh  mongodb_test.py  pyproject.toml
mongo1/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3907643134842860362.wt  collection-2--3907643134842860362.wt  collection-7--3907643134842860362.wt  index-3--3907643134842860362.wt  index-8--3907643134842860362.wt  index-9--3907643134842860362.wt  sizeStorer.wt
mongo1/.mongodb/mongosh/: 66e2f2cd4309af42b9c76a8a_log  66e2f2cda2fe4a5823c76a8a_log  config
mongo1/diagnostic.data/: metrics.2024-09-12T13-55-25Z-00000  metrics.2024-09-12T13-55-29Z-00000  metrics.interim
mongo2/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-2--4247414423499774163.wt  collection-7--4247414423499774163.wt  index-3--4247414423499774163.wt  sizeStorer.wt
mongo2/.mongodb/mongosh/: 66e2f2cdb0ce9f369ec76a8a_log  66e2f2cdd6d154d075c76a8a_log  config
mongo2/diagnostic.data/: metrics.2024-09-12T13-55-25Z-00000  metrics.2024-09-12T13-55-29Z-00000  metrics.interim
mongo3/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-2--5562599445043744815.wt  collection-7--5562599445043744815.wt  index-1--5562599445043744815.wt  index-3--5562599445043744815.wt  sizeStorer.wt
mongo3/.mongodb/mongosh/: 66e2f2cd3b1c0c0b04c76a8a_log  66e2f2cd52d30bb1abc76a8a_log  (+1 more)
mongo3/diagnostic.data/: metrics.2024-09-12T13-55-25Z-00000  metrics.2024-09-12T13-55-29Z-00000  metrics.interim
src/: bbf_demo.py  test_bank_balance_forward.py
